2016-11-10
---------------------
* The API was updated. std::vector was involved.
* The functions can be called in multiple threads at the same time.

2016-10-6
---------------------
* The algorithm has been speeded up greatly (2x to 3x). 
* The true positive rates (FDDB) have been improved 1% to 2% at FP=100.
* Multi-core parallelization has been disabled. The detection time is still the same.

2016-9-16
---------------------
* Speedup again.
* Change function name facedetect_frontal_tmp() to facedetect_frontal_surveillance(). This function now uses a new trained classifier which can achieve a higher detection speed.

2016-6-28
---------------------
* 64-bit dll added since there are so many users request it.
* An easter egg is hidden in the 64-bit dll. Can you find it?

2016-6-8
---------------------
* Speedup 1.2x
* Added an experimental function facedetect_frontal_tmp(). The function can gain a higher detection rate in video surveillance.