@@ -36,51 +36,33 @@ SOFTWARE.
 #endif
 #endif
 
-#include <vector>
-
-#ifndef FACEDETECTDLL_EXPORTS
-typedef struct FaceInfo_{
-    int x;
-    int y;
-    int width;
-    int height;
-    int neighbors;
-    int angle;
-} FaceInfo;
-#else
-#include "object-internal.h"
-#endif
-
-//return value: the number of detected faces
-FACEDETECTDLL_API int facedetect_frontal(std::vector<FaceInfo> & faces, //(output) vector of faces
+FACEDETECTDLL_API int * facedetect_frontal(unsigned char * result_buffer, //buffer memory for storing face detection results, !!its size must be 0xC004 Bytes!!
                                unsigned char * gray_image_data, int width, int height, int step, //input image, it must be gray (single-channel) image!
                                float scale, //scale factor for scan windows
                                int min_neighbors, //how many neighbors each candidate rectangle should have to retain it
                                int min_object_width, //Minimum possible face size. Faces smaller than that are ignored.
 							   int max_object_width=0); //Maximum possible face size. Faces larger than that are ignored. It is the largest posible when max_object_width=0.
 
-//return value: the number of detected faces
-FACEDETECTDLL_API int facedetect_multiview(std::vector<FaceInfo> & faces, //(output) vector of faces
+FACEDETECTDLL_API int * facedetect_frontal_surveillance(unsigned char * result_buffer, //buffer memory for storing face detection results, !!its size must be 0xC004 Bytes!!
                                unsigned char * gray_image_data, int width, int height, int step, //input image, it must be gray (single-channel) image!
                                float scale, //scale factor for scan windows
                                int min_neighbors, //how many neighbors each candidate rectangle should have to retain it
                                int min_object_width, //Minimum possible face size. Faces smaller than that are ignored.
 							   int max_object_width=0); //Maximum possible face size. Faces larger than that are ignored. It is the largest posible when max_object_width=0.
 
-//return value: the number of detected faces
-FACEDETECTDLL_API int facedetect_multiview_reinforce(std::vector<FaceInfo> & faces, //(output) vector of faces
+FACEDETECTDLL_API int * facedetect_multiview(unsigned char * result_buffer, //buffer memory for storing face detection results, !!its size must be 0xC004 Bytes!!
                                unsigned char * gray_image_data, int width, int height, int step, //input image, it must be gray (single-channel) image!
                                float scale, //scale factor for scan windows
                                int min_neighbors, //how many neighbors each candidate rectangle should have to retain it
                                int min_object_width, //Minimum possible face size. Faces smaller than that are ignored.
 							   int max_object_width=0); //Maximum possible face size. Faces larger than that are ignored. It is the largest posible when max_object_width=0.
 
-//return value: the number of detected faces
-FACEDETECTDLL_API int facedetect_frontal_surveillance(std::vector<FaceInfo> & faces, //(output) vector of faces
+FACEDETECTDLL_API int * facedetect_multiview_reinforce(unsigned char * result_buffer, //buffer memory for storing face detection results, !!its size must be 0xC004 Bytes!!
                                unsigned char * gray_image_data, int width, int height, int step, //input image, it must be gray (single-channel) image!
                                float scale, //scale factor for scan windows
                                int min_neighbors, //how many neighbors each candidate rectangle should have to retain it
                                int min_object_width, //Minimum possible face size. Faces smaller than that are ignored.
 							   int max_object_width=0); //Maximum possible face size. Faces larger than that are ignored. It is the largest posible when max_object_width=0.
+
 
 #endif
